--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -1908,3 +1908,286 @@ title = {{Revealing the Hidden Language of Complex Networks}},
 volume = {4},
 year = {2014}
 }
+
+
+
+
+
+
+
+
+
+@article{Lee2019,
+    author = {Lee YH},
+    title = {Strengths and Limitations of Meta-Analysis},
+    journal = {The Korean Journal of Internal Medicine},
+    volume = {94},
+    number = {5},
+    pages = {391-395},
+    url = {https://www.ekjm.org/journal/view.php?number=25636},
+    year = {2019}
+}
+
+
+@article{Finckh2008,
+    author = {Finckh A},
+    title = {Primer: strengths and weaknesses of meta-analysis},
+    journal = {Nature Clinical Practice Rheumatology},
+    volume = {4},
+    number = {3},
+    pages = {146-152},
+    url = {https://www.nature.com/articles/ncprheum0732},
+    year = {2008}
+}
+
+
+@article{Israel2011,
+    author = {Israel H},
+    title = {A guide to understanding meta-analysis},
+    journal = {Journal of Orthopaedic & Sports Physical Therapy},
+    volume = {41},
+    number = {7},
+    pages = {496-504},
+    url = {https://www.jospt.org/doi/10.2519/jospt.2011.3333?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    year = {2011}
+}
+
+
+@article{Hoffman2019,
+    author = {Hoffman JIE},
+    title = {Basic biostatistics for medical & biomedical practitioners},
+    journal = {Indian Journal of Medical Research},
+    volume = {154},
+    number = {6},
+    pages = {899–900},
+    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9347243/},
+    year = {2019}
+}
+
+
+@article{Haidich2010,
+    author = {Haidich AB},
+    title = {Meta-analysis in medical research},
+    journal = {Hippokratia},
+    volume = {14},
+    number = {Suppl 1},
+    pages = {29-37},
+    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3049418/},
+    year = {2010}
+}
+
+
+@article{Ma2022,
+    author = {Ma S},
+    title = {Population structure discovery in meta-analyzed microbial communities and inflammatory bowel disease using MMUPHin},
+    journal = {Genome Biology},
+    volume = {23},
+    number = {1},
+    pages = {208},
+    url = {https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02753-4},
+    year = {2022}
+}
+
+
+@article{Pasolli2017,
+    author = {Pasolli E},
+    title = {Accessible, curated metagenomic data through ExperimentHub},
+    journal = {Nature Methods},
+    volume = {14},
+    number = {11},
+    pages = {1023-1024},
+    url = {https://www.nature.com/articles/nmeth.4468},
+    year = {2017}
+}
+
+
+@article{Mallick2021,
+    author = {Mallick H},
+    title = {Multivariable Association Discovery in Population-scale Meta-omics Studies},
+    journal = {PLOS Computational Biology},
+    volume = {17},
+    number = {11},
+    pages = {e1009442},
+    url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009442},
+    year = {2021}
+}
+
+
+@article{Frankel2017,
+    author = {Frankel AE},
+    title = {Metagenomic Shotgun Sequencing and Unbiased Metabolomic Profiling Identify Specific Human Gut Microbiota and Metabolites Associated with Immune Checkpoint Therapy Efficacy in Melanoma Patients},
+    journal = {Neoplasia},
+    volume = {19},
+    number = {10},
+    pages = {848-855},
+    url = {https://www.clinicalkey.com/#!/content/playContent/1-s2.0-S1476558617302385?returnurl=https:%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1476558617302385%3Fshowall%3Dtrue&referrer=https:%2F%2Fpubmed.ncbi.nlm.nih.gov%2F},
+    year = {2017}
+}
+
+
+@article{Lee2022,
+    author = {Lee KA},
+    title = {Cross-cohort gut microbiome associations with immune checkpoint inhibitor response in advanced melanoma},
+    journal = {Nature Medicine},
+    volume = {28},
+    number = {3},
+    pages = {535-544},
+    url = {https://www.nature.com/articles/s41591-022-01695-5},
+    year = {2022}
+}
+
+
+@article{Matson2018,
+    author = {Matson V},
+    title = {The commensal microbiome is associated with anti-PD-1 efficacy in metastatic melanoma patients},
+    journal = {Science},
+    volume = {359},
+    number = {6371},
+    pages = {104-108},
+    url = {https://www.science.org/doi/10.1126/science.aao3290?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    year = {2018}
+}
+
+
+@article{Peters2019,
+    author = {Peters BA},
+    title = {Relating the gut metagenome and metatranscriptome to immunotherapy responses in melanoma patients},
+    journal = {Genome Medicine},
+    volume = {11},
+    number = {1},
+    pages = {61},
+    url = {https://genomemedicine.biomedcentral.com/articles/10.1186/s13073-019-0672-4},
+    year = {2019}
+}
+
+
+@article{Wind2020,
+    author = {Wind TT},
+    title = {Gut microbial species and metabolic pathways associated with response to treatment with immune checkpoint inhibitors in metastatic melanoma},
+    journal = {Melanoma Research},
+    volume = {30},
+    number = {3},
+    pages = {235-246},
+    url = {https://journals.lww.com/melanomaresearch/fulltext/2020/06000/gut_microbial_species_and_metabolic_pathways.2.aspx},
+    year = {2020}
+}
+
+
+@article{Tang2016,
+    author = {Tang ZZ},
+    title = {PERMANOVA-S: association test for microbial community composition that accommodates confounders and multiple distances},
+    journal = {Bioinformatics},
+    volume = {32},
+    number = {17},
+    pages = {2618-2625},
+    url = {https://academic.oup.com/bioinformatics/article/32/17/2618/2450751?login=true},
+    year = {2016}
+}
+
+
+@article{Mallick2022,
+    author = {Mallick H},
+    title = {Differential expression of single-cell RNA-seq data using Tweedie models},
+    journal = {Statistics in Medicine},
+    volume = {41},
+    number = {18},
+    pages = {3492-3510},
+    url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9288986/},
+    year = {2022}
+}
+
+
+@article{Ding2022,
+    author = {Ding DY},
+    title = {Cooperative learning for multiview analysis},
+    journal = {Proceedings of the National Academy of Sciences},
+    volume = {119},
+    number = {38},
+    pages = {e2202113119},
+    url = {https://www.pnas.org/doi/full/10.1073/pnas.2202113119},
+    year = {2022}
+}
+
+
+@article{Van2007,
+    author = {Van der Laan MJ},
+    title = {Super learner},
+    journal = {Statistical Applications in Genetics and Molecular Biology},
+    volume = {6},
+    number = {},
+    pages = {Article25},
+    url = {https://www.degruyter.com/document/doi/10.2202/1544-6115.1309/html},
+    year = {2007}
+}
+
+
+@article{Mallick2023,
+    author = {Mallick H},
+    title = {An integrated Bayesian framework for multi-omics prediction and classification},
+    journal = {Statistics in Medicine},
+    volume = {43},
+    number = {5},
+    pages = {983-1002},
+    url = {https://pubmed.ncbi.nlm.nih.gov/38146838/},
+    year = {2023}
+}
+
+
+@article{Lloyd-Price2019,
+    author = {Lloyd-Price J},
+    title = {Multi-omics of the gut microbial ecosystem in inflammatory bowel diseases},
+    journal = {Nature},
+    volume = {569},
+    number = {7758},
+    pages = {655-662},
+    url = {},
+    year = {2019}
+}
+
+
+@article{Subramanian2005,
+    author = {Subramanian A},
+    title = {Gene set enrichment analysis: a knowledge-based approach for interpreting genome-wide expression profiles},
+    journal = {Proceedings of the National Academy of Sciences},
+    volume = {102},
+    number = {43},
+    pages = {15545-15550},
+    url = {https://www.pnas.org/doi/10.1073/pnas.0506580102?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed},
+    year = {2005}
+}
+
+
+@article{Kou2020,
+    author = {Kou Y},
+    title = {Microbe-set enrichment analysis facilitates functional interpretation of microbiome profiling data},
+    journal = {Scientific Reports},
+    volume = {10},
+    number = {1},
+    pages = {21466},
+    url = {https://www.nature.com/articles/s41598-020-78511-y},
+    year = {2020}
+}
+
+
+@article{Langfelder2008,
+    author = {Langfelder},
+    title = {WGCNA: an R package for weighted correlation network analysis},
+    journal = {BMC Bioinformatics},
+    volume = {9},
+    number = {},
+    pages = {559},
+    url = {https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-9-559},
+    year = {2008}
+}
+
+
+@article{Geistlinger2023,
+    author = {Geistlinger L},
+    title = {BugSigDB captures patterns of differential abundance across a broad range of host-associated microbial signatures},
+    journal = {Nature Biotechnology},
+    volume = {},
+    number = {},
+    pages = {},
+    url = {https://doi.org/10.1038/s41587-023-01872-y},
+    year = {2023}
+}
