replace getPrevalent*, getTop*, getUnique* and getRare* functions

--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -433,7 +433,7 @@ that A 3D interactive version of the plot below can be found in [@sec-extras].
 
 ```{r}
 # Getting the top taxa
-top_taxa <- getTopFeatures(tse_genus,
+top_taxa <- getTop(tse_genus,
                            top = 6,
                            assay.type = "relabundance")
 
