--- a/inst/pages/add-comm-typing.Rmd
+++ b/inst/pages/add-comm-typing.Rmd
@@ -145,7 +145,7 @@ tse <- tse[, colData(tse)$Country == "Finland"]
 # Agglomerate to phylum level
 tse <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Get top taxa
-rel_taxa <- getTopFeatures(tse, top = 8, assay.type = "counts")
+rel_taxa <- getTop(tse, top = 8, assay.type = "counts")
 # Take only the top taxa
 tse <- tse[is.element(rownames(tse), rel_taxa), ]
 
