--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -111,11 +111,11 @@ To apply the loop resolving function `resolveLoop` from the
 `TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment] within
 `getTaxonomyLabels`, set `resolve_loops = TRUE`.
 
-The function `getUniqueFeatures` gives a list of unique taxa for the
+The function `getUnique` gives a list of unique taxa for the
 specified taxonomic rank.
 
 ```{r}
-head(getUniqueFeatures(tse, rank = "Phylum"))
+head(getUnique(tse, rank = "Phylum"))
 ```
 
 ### Generate a hierarchy tree on the fly {#sec-fly-tree}
