--- a/inst/pages/IntegratedLearner.qmd
+++ b/inst/pages/IntegratedLearner.qmd
@@ -23,7 +23,7 @@ predictions from different data views to align through an agreement parameter
 
 In this chapter, we showcase examples of various integration paradigms (early,
 late, and intermediate fusion) using the R packages `multiview` [[@Ding2022]]
-and `SuperLearner` [@Van]. We make use of the publicly available source code
+and `SuperLearner` [@Van2007]. We make use of the publicly available source code
 from the multi-omics integrated framework (`IntegratedLearner`) proposed by
 @Mallick2023.
 
@@ -35,7 +35,6 @@ predict IBD disease status based on both taxonomic (species abundances) and
 functional (pathway abundances) profiles.
 
 ```{r load-pkg-data}
-
 ##################
 # Load iHMP data #
 ##################
@@ -58,7 +57,6 @@ We will first prepare the input sample metadata and feature table for both
 relative abundance and pathway abundance data.
 
 ```{r prepare-metadata-feature}
-
 ##########################
 # Create sample metadata #
 ##########################
@@ -107,7 +105,6 @@ high-level information related to the features (e.g., which layer they belong
 to).
 
 ```{r create-metadata-table}
-
 ######################################
 # Create metadata table for features #
 ######################################
@@ -132,7 +129,6 @@ is applied to the feature table, while related metadata is cleaned to ensure the
 retention of matching samples.
 
 ```{r create-feature-table}
-
 #################
 # feature_table #
 #################
@@ -161,7 +157,6 @@ table(feature_metadata$featureType)
 
 all(rownames(feature_table) == rownames(feature_metadata)) # TRUE
 all(colnames(feature_table) == rownames(sample_metadata)) # TRUE
-
 ```
 
 Following the preprocessing, we conduct additional input data preparation,
@@ -172,7 +167,6 @@ measures (i.e., multiple samples per subject). To address this, we will conduct
 the `IntegratedLearner` R package [@Mallick2023].
 
 ```{r additional-data-preprocessing}
-
 library(caret)
 
 # Set parameters and extract subject IDs for sample splitting
@@ -227,7 +221,6 @@ words, we fit a machine learning algorithm per layer (called a 'base learner'),
 utilizing the SuperLearner R package.
 
 ```{r late-fusion}
-
 ########################################################
 # Subset data per omics and run each individual layers #
 ########################################################
@@ -265,7 +258,6 @@ for (i in seq_along(name_layers)){
   layer_wise_predictions_train[[i]] <- SL_fit_layers[[i]]$SL.predict
   
 }
-
 ```
 
 The next step of the analysis is to combine the layer-wise cross-validated
@@ -274,7 +266,6 @@ based on all available data points for the stacked model. Here, we will use
 `glmnet` as the meta-learner. However, other choices are also possible.
 
 ```{r layer-wise-cross-validated-prediction}
-
 ##############################
 # Prepare stacked input data #
 ##############################
@@ -316,7 +307,6 @@ representation of the data and we will use the `random forest` method for
 building an integrated prediction model.
 
 ```{r early-fusion}
-
 #####################################
 # EARLY FUSION (CONCATENATED MODEL) #
 #####################################
@@ -355,7 +345,6 @@ Here, as examples, we will prepare the input data, fit the multiview model, and
 run the cross-validation in this section.
 
 ```{r prepare-input-data}
-
 ##############################
 # Prepare data for multiview #
 ##############################
@@ -423,7 +412,6 @@ for(k in 1:length(list.ROC)){
     
 # Combine
 ROC_table <- do.call('rbind', list.ROC)
-
 ```
 
 Based on the ROC plot described below, we observe that the AUC is 0.65 when 
@@ -435,7 +423,6 @@ classifiers outperform individual layers in distinguishing between IBD and
 non-IBD controls.
 
 ```{r visualization2}
-
 # Prepare data for plotting
 plot_data <- ROC_table
 plot_data$displayItem <- paste(plot_data$layer, " AUC = ", plot_data$AUC, sep="")
@@ -493,7 +480,6 @@ p <- DD %>%
                      panel.grid.minor.y = element_blank(),
                      panel.grid.major.y = element_blank())
 p
-
 ```
 
 Based on the bar plot, we observe that \emph{Proteobacteria_bacterium_CAG.139}
@@ -501,5 +487,3 @@ is the species most positively associated, while \emph{Gemmiger_formicilis} is
 the most negatively associated species. Additionally, L-lysine biosynthesis VI
 is the pathway most positively associated, and PYRIDNUSCYN-PWY: NAD biosynthesis
 I (from aspartate) is the pathway most positively associated, respectively.
-
-
