Added a link to ggpubr package

--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -5,7 +5,7 @@ library(rebook)
 chapterPreamble()
 ```
 
-Diversity estimates are a central topic in microbiome data analysis. 
+Community diversity is a central concept in microbiome data analysis. 
 
 There are three commonly employed levels of diversity measurements,
 which are trying to put a number on different aspects of the questions
@@ -108,21 +108,26 @@ tse <- mia::estimateDiversity(tse,
 head(tse$shannon)
 ```
 
-Alpha diversities can be visualized with boxplot. Here, Shannon index is compared 
-between different sample type groups. Individual data points are visualized by 
-plotting them as points with `geom_jitter`.
+Alpha diversities are commonly visualized using boxplots.
 
-`geom_signif` is used to test whether these differences are statistically significant.
-It adds p-values to plot.
+Here, let us compare Shannon index between sample groups. Individual
+data points can be visualized with `geom_jitter`.
+
+The `geom_signif` function tests whether these differences are
+statistically significant and adds (adjusted) p-values to plot. See
+also the [ggpubr package](http://www.sthda.com/english/articles/24-ggpubr-publication-ready-plots/76-add-p-values-and-significance-levels-to-ggplots/)
+for additional flexibility in group-wise comparison plots and
+associated p-values.
+
+
 
 ```{r visualize-shannon}
 library(ggsignif)
 library(ggplot2)
 library(patchwork)
-library(ggsignif)
 
-# Subsets the data. Takes only those samples that are from feces, skin, or tongue,
-# and creates data frame from the collected data
+# Subsets the data. Takes only those samples that are from
+# feces, skin, or tongue, and creates data frame from the collected data.
 df <- as.data.frame(colData(tse)[tse$SampleType %in% 
                  c("Feces", "Skin", "Tongue"), ])
 
@@ -143,6 +148,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
               correction="fdr") + #corrects the p-values
   theme(text = element_text(size = 10))
 ```
+
 
 ### Faith phylogenetic diversity {#sec-faith-diversity}
 
