--- a/inst/pages/95_resources.qmd
+++ b/inst/pages/95_resources.qmd
@@ -112,6 +112,8 @@ project [@Huber2015].
 
 ### Bioconductor Classes {#sec-bioc_intro}
 
+[Introduction to data analysis with R and Bioconductor](https://carpentries-incubator.github.io/bioc-intro/); Carpentries introduction, including R & RStudio installation instructions
+
 **S4 system**
 
 S4 class system has brought several useful features to the
